# cpp-proio

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
docs/: genAndDeploy.sh
src/: event.cc  event.h  reader.cc  reader.h  writer.cc  writer.h
src/tests/eicunset/: main.cc
src/tests/pushgetinspect/: main.cc
src/tests/refderef/: main.cc
src/tests/serialize/: main.cc
src/tests/tagmanip/: main.cc
